<resources>
    <string name="cadastro_de_mudas_titulo">Cadastro de Mudas</string>
    <string name="descricao_cadastro_mudas">Preencha as informações para registrar uma nova planta no viveiro.</string>

    <string name="app_name">BryanProjetoDMOB</string>
    <string name="trabalhando_com_banco_de_dados_no_android">Gerenciamento de Viveiro</string> <string name="escolha_uma_das_op_es_abaixo">Escolha uma opção para Mudas:</string> <string name="criar_banco_de_dados">Criar Tabela de Mudas</string> <string name="todo">Ícone de Banco de Dados</string> <string name="cadastrar_dados">Cadastrar Mudas</string>

    <string name="consultar_dados">Consultar Mudas</string>

    <string name="alterar_dados">Alterar Mudas</string>

    <string name="excluir_dados">Excluir Mudas</string>

    <string name="cadastrar">Cadastrar</string>
    <string name="preco">Preço:</string>
    <string name="cadastro_de_usu_rio">Cadastro de Usuário</string>
    <string name="estoque">Estoque:</string>
    <string name="nome">Nome:</string>
    <string name="esta_aplica_o_ir_registrar_as_informa_es_do_usu_rio_no_banco_de_dados">Esta aplicação irá registrar as informações do usuário no Banco de Dados.</string>
    <string name="digite_seu_nome">Digite o nome da Planta</string>
    <string name="digite_estoque">Digite a Quantidade</string>
    <string name="digite_preco">Digite o preço</string>
    <string name="cadastrar_dados2">Cadastrar Dados (2ª Edição)</string>
    <string name="status">#status</string>
    <string name="nomeConsulta">[Nome]</string>
    <string name="telefoneConsulta">[Telefone]</string>
    <string name="emailConsulta">[E-Mail]</string>
    <string name="alterar_dados2">Alterar Dados (2ª Edição)</string>
    <string name="nomeAltera">[Nome]</string>
    <string name="telefoneAltera">[Telefone]</string>
    <string name="emailAltera">[E-Mail]</string>
    <string name="nomeColchetes">[Nome]</string>
    <string name="telefoneColchetes">[Telefone]</string>
    <string name="emailColchetes">[EMail]</string>
    <string name="voltar"> Voltar</string>
    <string name="manterMudas">Manter Mudas</string>
    <string name="manterProdutos">Manter Produtos</string>
    <string name="criarBancoInicio">Criar Banco de Dados</string>
    <string name="enunciadoInicio">Bem-Vindo! Escolha o que você deseja gerenciar:</string>

</resources>