<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo_folhas_sutil" > <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor"
    android:gravity="center_vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/icone_cadastro"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/layoutCorFundo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_mudas_titulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/branco_puro"
            android:textSize="22sp"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:id="@+id/layoutConteudo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_cadastro_mudas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cinza_texto_escuro"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="@color/primaryDarkColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ednome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_seu_nome"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            tools:ignore="Autofill,VisualLintTextFieldSize">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/estoque"
            android:textColor="@color/primaryDarkColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edestoque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_estoque"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/preco"
            android:textColor="@color/primaryDarkColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edpreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_preco"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center|bottom"
            android:paddingBottom="24dp">

            <Button
                android:id="@+id/btcadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/branco_puro"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>