<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo_folhas_sutil" > <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor"
    android:gravity="center_vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icone_excluir_dados"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/layoutCorFundo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir_dados"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/branco_puro"
            android:textSize="22sp"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_white_background"
            android:padding="24dp"
            android:elevation="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:text="@string/nome" />

            <TextView
            android:id="@+id/txtnome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeColchetes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cinza_texto_escuro"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:text="@string/estoque" />
            <TextView
            android:id="@+id/estoque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefoneColchetes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cinza_texto_escuro"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:text="@string/preco" />

            <TextView
            android:id="@+id/preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailColchetes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cinza_texto_escuro"
            android:textSize="20sp"
            android:layout_marginBottom="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imgprimeiro"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_primeiro" />

                <ImageView
                    android:id="@+id/imganterior"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_anterior" />

                <ImageView
                    android:id="@+id/imgproximo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_proximo" />

                <ImageView
                    android:id="@+id/imgultimo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_ultimo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/txtstatus_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/primaryDarkColor"
                    tools:text="@string/status" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <Button
                    android:id="@+id/btexcluirdados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excluir_dados"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:textColor="@color/branco_puro"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>