<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo_folhas_sutil" > <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor"
    android:gravity="center_vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icone_alterar_dados"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/layoutCorFundo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alterar_dados"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/branco_puro"
            android:textSize="22sp"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_white_background"
            android:padding="24dp"
            android:elevation="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/nome" /> <EditText
            android:id="@+id/txtnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_seu_nome"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            android:minHeight="48dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/estoque" /> <EditText
            android:id="@+id/txttelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_estoque"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            android:minHeight="48dp">
            <requestFocus />
        </EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/preco" /> <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/digite_preco"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/cinza_texto_escuro"
            android:backgroundTint="@color/verde_escuro_natureza"
            android:minHeight="48dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="24dp" >

                <ImageView
                    android:id="@+id/imgprimeiro"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_primeiro" />

                <ImageView
                    android:id="@+id/imganterior"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_anterior" />

                <ImageView
                    android:id="@+id/imgproximo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_proximo" />

                <ImageView
                    android:id="@+id/imgultimo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/botao_ultimo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/txtstatus_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/status"
                    android:textColor="@color/primaryDarkColor"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <Button
                    android:id="@+id/btalterardados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alterar_dados"
                    android:backgroundTint="@color/primaryColor"
                    android:textColor="@color/branco_puro"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>